--- a/scss/layout/_main_section.scss
+++ b/scss/layout/_main_section.scss
@@ -12,4 +12,17 @@ main{
         font-size: 1.125rem;
         color: $CouleurParagraphes;
     }
+    #presentation{
+        @include flex_column;
+        img{
+            width: 200px;
+        }
+    }
+    form{
+        @include flex_column;
+        width: 300px;
+        background: $CouleurBoutonsVert;
+    }
+    
 }
+
