--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -2,3 +2,8 @@
     display: flex;
     flex-direction: column;
 }
+
+@mixin flex_space-around {
+    display: flex;
+    justify-content: space-around;
+}
