--- a/scss/layout/_main_section.scss
+++ b/scss/layout/_main_section.scss
@@ -6,7 +6,6 @@ main{
         color: $CouleurTitresSombres;
     }
     p{
-        text-align: center;
         font-family: 'Mukta Mahee',sans-serif;
         font-weight: 500;
         font-size: 1.125rem;
@@ -21,8 +20,26 @@ main{
     form{
         @include flex_column;
         width: 300px;
+        height: 300px;
         background: $CouleurBoutonsVert;
+        button, select{
+            height: 40px;
+            width: 100%;
+            max-width: 100%;
+            margin-top: 20px;
+        }
+        legend{
+            color:$PoliceBlanche;
+            font-weight: bold;
+            text-align: center;
+        }
     }
-    
+    article{
+        margin-top: 50px;
+    }
+
+    .blocs_en_ligne{
+        @include flex_space-around;
+    }
 }
 
