--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,11 @@
+header{
+    position: relative;
+        height: 100%;
+        width: 100%;
+        
+}
+
+
 .swiper {
     width: 100%;
     height: 100%;
@@ -19,5 +27,5 @@
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
   }
