ajout des fichier nexs

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,4 +1,1 @@
-$CouleurTitresSombres: #231f20;
-$CouleurParagraphes: #585858;
-$CouleurBoutonsVert: #007c74;
-$PoliceBlanche: white;
+$gris: #585858;
