--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,20 +11,19 @@
 
 // COMPONENTS
 @import "components/button";
-@import "components/images";
 
 
 // LAYOUT
 @import "layout/footer";
 @import "layout/header";
 @import "layout/navigation";
-@import "layout/main_section";
 
 
 // PAGE
 @import "pages/itineraire";
 @import "pages/infos-pratiques";
 @import "pages/home";
+@import "pages/news";
 
 
 
