--- a/scss/base/_typo.scss
+++ b/scss/base/_typo.scss
@@ -1,1 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600&display=swap');
 
+*{
+    font-family: 'Mukta Mahee',sans-serif;
+}
