Ajout des lignes effacées lors d'un précédent commit

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,1 +1,9 @@
 $gris: #585858;
+
+$CouleurTitresSombres: #231f20;
+
+$CouleurParagraphes: #585858;
+
+$CouleurBoutonsVert: #007c74;
+
+$PoliceBlanche: white; 
