--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,12 +11,14 @@
 
 // COMPONENTS
 @import "components/button";
+@import "components/images";
 
 
 // LAYOUT
 @import "layout/footer";
 @import "layout/header";
 @import "layout/navigation";
+@import "layout/main_section";
 
 
 // PAGE
