--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -26,20 +26,19 @@ main{
     form{
         @include flex_column;
         width: 300px;
-        height: 300px;
+        height: 350px;
         background: $CouleurBoutonsVert;
-        button, select{
-            height: 40px;
-            width: 100%;
-            max-width: 100%;
-            margin-top: 20px;
+        box-shadow: 2px 2px 10px grey;
+        border-radius: 5px;    
+        align-items: center;
+        justify-content: space-evenly;
         }
         legend{
             color:$PoliceBlanche;
             font-weight: bold;
             text-align: center;
         }
-    }
+    
     article{
         margin-top: 50px;
     }
