--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -15,3 +15,14 @@ form{
         margin-top: 20px;
     }
 }
+
+.BoutonTransparent{
+    border-radius: 5px;
+    width: 200px;
+    color: $PoliceBlanche;
+    border: 1px solid white;
+    background: none;
+    height: 40px;
+    margin-left: 5%;
+    margin-bottom: 2%;
+}
