--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -76,10 +76,27 @@ main{
         width: 100%;
         height: 500px;
         justify-content: space-between;
+        color: $PoliceBlanche;
         section{
             width: 100%;
             display: flex;
             justify-content: space-around;   
         }
+        h2,p{
+            color: $PoliceBlanche;
+        }
+    }
+
+    .BlocsContenuCentre{
+        @include flex_column;
+        align-items: center;
+        text-align: center;
+    }
+
+    #Grille_main{
+        width: 100%;
+        display: grid;
+        gap: 30px;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
