--- a/scss/pages/_news.scss
+++ b/scss/pages/_news.scss
@@ -1,3 +1,5 @@
+
+
 article{
     width: 100%;
     height: auto;
@@ -10,8 +12,55 @@ header h1{
 }
 
 header h3{
-    margin-top: 6%;
+    margin-top: 4%;
     text-align: center;
-    color: $gris;
+    color: $CouleurTitresSombres;
     font-size: 1em;
+}
+
+section{
+    width: 75vw;
+    height: auto;
+    margin: 5% auto;
+}
+
+.grille{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap:30px;
+}
+
+.item{
+    width: 100%;
+    height: 100%;
+    border-radius: 0 0 7px 7px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+
+    img{
+        width: 100%;
+        height: min-content;
+        border-radius: 7px 7px 0 0;
+    }
+    p{
+        padding: 15px;
+        text-align: center;
+    }
+}
+
+.flex-box{
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    h3{
+        font-size: 12px;
+        padding: 10px;
+        
+    }
+    h1{
+        color: $CouleurBoutonsVert;
+        padding: 10px;
+        font-size: 23px;
+    }
 }
