--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,5 +1,5 @@
 main{
-    width: 1100px;
+    width: 100%;
     margin: 0 auto;
     h2{
         font-family: sans-serif;
@@ -14,6 +14,23 @@ main{
         color: $CouleurParagraphes;
         width: 100%;
     }
+    .BlocsReduits{
+        width: 1100px;
+        margin: 0 auto;
+        margin-top: 100px;
+    }
+
+    #carte{
+        width: 50%;
+        height: 100%;
+        box-sizing: border-box;
+        padding-left: 10px;
+    }
+
+    #BlocPresentationCarte{
+        display: flex;
+    }
+
     #presentation{
         width: 50%;
         justify-content: space-around;
