--- a/scss/pages/_temoignage.scss
+++ b/scss/pages/_temoignage.scss
@@ -36,8 +36,9 @@ section {
 .box {
   width: 100%;
   height: 100%;
-
   position: relative;
+  cursor: pointer;
+
   img {
     width: 100%;
     height: min-content;
@@ -52,8 +53,14 @@ section {
     font-size: 1em;
     position: absolute;
     z-index: 1;
-    bottom: 0;
+    bottom: 15px;
     padding: 10px;
     color: $PoliceBlanche;
+  }
+}
+.box:hover {
+  img {
+    filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
   }
 }
