--- a/scss/pages/_temoignage.scss
+++ b/scss/pages/_temoignage.scss
@@ -7,6 +7,7 @@ header h1 {
   margin-top: 3%;
   text-align: center;
   font-size: 3em;
+  font-weight: normal;
 
   strong {
     color: $CouleurBoutonsVert;
@@ -72,6 +73,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-bottom: 50px;
   a {
     text-transform: uppercase;
     text-decoration: none;
@@ -93,5 +95,17 @@ section {
       background-color: $CouleurTitresSombres;
       color: $PoliceBlanche;
     }
+  }
+}
+
+.avis {
+  display: grid;
+  grid-template-columns: repeat(3, 30%);
+  gap: 30px;
+
+  .card {
+    background-color: $CouleurBoutonsVert;
+    width: 20vw;
+    height: 60vh;
   }
 }
