--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,4 +1,24 @@
 .cycliste{
-    width: 200px;
+    width: 300px;
     height: 200px;
+    border-radius: 7px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+.cycliste1{
+    width: 30%;
+    height: 300px;
+    border-radius: 7px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+.TrouverMonVelo{
+    width: 200px;
+    height: 150px;
+    border-radius: 7px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+}
+
+#landscape{
+    width: 100%;
 }
