--- a/scss/pages/_temoignage.scss
+++ b/scss/pages/_temoignage.scss
@@ -104,8 +104,86 @@ section {
   gap: 30px;
 
   .card {
-    background-color: $CouleurBoutonsVert;
-    width: 20vw;
-    height: 60vh;
+    background-color: $BgBlancSombre;
+    width: auto;
+    height: auto;
+    padding: 30px;
+    position: relative;
+
+    .card-heure h4 {
+      font-weight: lighter;
+      font-size: 0.9em;
+    }
+
+    .card-infos {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: 2.5%;
+
+      h1 {
+        font-size: 1.5em;
+      }
+      ul {
+        list-style: none;
+        display: flex;
+        align-items: center;
+
+        li {
+          font-size: 1.1em;
+        }
+      }
+    }
+    .etape {
+      margin: 2.5%;
+      h3 {
+        font-size: 0.9em;
+        color: $PoliceBlanche;
+        background-color: $CouleurBoutonsVert;
+        padding: 5px;
+        width: max-content;
+      }
+    }
+    .note {
+      margin-top: 12%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      ul {
+        list-style: none;
+        display: flex;
+        align-items: center;
+
+        li {
+          font-size: 1em;
+          text-align: center;
+          padding-right: 30px;
+          font-weight: bold;
+
+          span {
+            font-size: 0.8em;
+            font-weight: lighter;
+          }
+        }
+      }
+    }
+
+    p {
+      margin-top: 12%;
+      height: auto;
+      margin-bottom: 10%;
+    }
+
+    .card-footer {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+
+      h5 {
+        font-size: 0.9em;
+        color: $gris;
+      }
+    }
   }
 }
