--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,7 +1,7 @@
 form{
     button{
         border-radius: 5px;
-        border: $CouleurTitresSombres;
+        border: 2px solid $CouleurTitresSombres;
         background-color: $CouleurTitresSombres;
         color: $PoliceBlanche;
         width: 95%;
