--- a/scss/pages/_temoignage.scss
+++ b/scss/pages/_temoignage.scss
@@ -100,28 +100,30 @@ section {
 
 .avis {
   display: grid;
-  grid-template-columns: repeat(3, 30%);
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
-  height: max-content;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
+  
+  
 
   .card {
     background-color: $BgBlancSombre;
-    width: auto;
-    height: max-content;
-    padding: 30px;
+    height: 100%;
+    width: 100%;
     position: relative;
 
     .card-heure h4 {
+      padding:10px;
       font-weight: lighter;
       font-size: 0.9em;
     }
 
     .card-infos {
+      padding:10px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin: 2.5%;
 
       h1 {
         font-size: 1.5em;
@@ -137,7 +139,7 @@ section {
       }
     }
     .etape {
-      margin: 2.5%;
+      padding:10px;
       h3 {
         font-size: 0.9em;
         color: $PoliceBlanche;
@@ -147,7 +149,7 @@ section {
       }
     }
     .note {
-      margin-top: 12%;
+      padding-top:30px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -172,15 +174,24 @@ section {
     }
 
     p {
-      margin-top: 12%;
+      padding:40px;
+      margin-top: 5%;
       height: auto;
-      margin-bottom: 10%;
+      margin-bottom: 5%;
     }
 
     .card-footer {
       display: flex;
       justify-content: space-between;
-      width: 100%;
+      width:85%;
+      right: 50%;
+      left: 47%;
+      transform: translate(-50%);
+      margin: 0 auto;
+      position: absolute;
+      bottom: 0px;
+      margin: 3%;
+
 
       h5 {
         font-size: 0.9em;
