--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -7,7 +7,7 @@
 }
 
 .contenu {
-  position: relative;
+  position: absolute;
   width: 100vw;
   height: 95vh;
   overflow: hidden;
@@ -26,20 +26,20 @@
 
 .slideshow input + label {
   position: absolute;
-  bottom: 15px;
-  left: 50%;
-  width: 6px;
-  height: 6px;
+  bottom: 200px;
+  left: 1000px;
+  width: 10px;
+  height: 2px;
   display: block;
   z-index: 1000;
-  border: 3px solid #fff;
-  border: 3px solid rgba(255, 255, 255, 0.9);
+  border: 3px solid rgb(255, 0, 0);
+  border: 3px solid rgba(255, 0, 0, 0.9);
   border-radius: 20%;
   transition: background-color linear 0.1s;
 }
 
 .slideshow input:checked + label {
-  background-color: #fff;
+  background-color: rgb(255, 0, 0);
   background-color: rgba(255, 255, 255, 0.9);
 }
 
@@ -165,6 +165,23 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   opacity: 1;
 }
 
+@media screen and (max-width: 840px)
+{
+	.slideshow { height: 345px; }
+}
+@media screen and (max-width: 680px)
+{
+	.slideshow { height: 285px; }
+}
+@media screen and (max-width: 560px)
+{
+	.slideshow { height: 235px; }
+}
+@media screen and (max-width: 320px)
+{
+	.slideshow { height: 158px; }
+}
+
 @keyframes slider {
   0%,
   20%,
@@ -179,4 +196,15 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   70% {
     left: -200%;
   }
+}
+
+.nav{
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 20px;
+    font-size: 30px;
+    margin: 1px;
 }
