--- a/scss/pages/_temoignage.scss
+++ b/scss/pages/_temoignage.scss
@@ -101,26 +101,25 @@ section {
 .avis {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
+  gap: 60px;
   width: 100%;
   height: 100%;
-  
-  
 
   .card {
     background-color: $BgBlancSombre;
     height: 100%;
     width: 100%;
     position: relative;
+    padding: 20px;
 
     .card-heure h4 {
-      padding:10px;
+      padding: 10px;
       font-weight: lighter;
       font-size: 0.9em;
     }
 
     .card-infos {
-      padding:10px;
+      padding: 10px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -135,11 +134,12 @@ section {
 
         li {
           font-size: 1.1em;
+          color: $CouleurBoutonsVert;
         }
       }
     }
     .etape {
-      padding:10px;
+      padding: 10px;
       h3 {
         font-size: 0.9em;
         color: $PoliceBlanche;
@@ -149,7 +149,7 @@ section {
       }
     }
     .note {
-      padding-top:30px;
+      padding-top: 30px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -174,7 +174,7 @@ section {
     }
 
     p {
-      padding:40px;
+      padding: 40px;
       margin-top: 5%;
       height: auto;
       margin-bottom: 5%;
@@ -183,7 +183,7 @@ section {
     .card-footer {
       display: flex;
       justify-content: space-between;
-      width:85%;
+      width: 85%;
       right: 50%;
       left: 47%;
       transform: translate(-50%);
@@ -191,7 +191,6 @@ section {
       position: absolute;
       bottom: 0px;
       margin: 3%;
-
 
       h5 {
         font-size: 0.9em;
