--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -186,3 +186,106 @@ main{
         }
     }
 }
+
+.avis {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 60px;
+    width: 100%;
+    height: 100%;
+  
+    .card {
+      background-color: $BgBlancSombre;
+      height: 100%;
+      width: 100%;
+      position: relative;
+      padding: 20px;
+  
+      .card-heure h4 {
+        padding: 10px;
+        font-weight: lighter;
+        font-size: 0.9em;
+      }
+  
+      .card-infos {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+  
+        h1 {
+          font-size: 1.5em;
+        }
+        ul {
+          list-style: none;
+          display: flex;
+          align-items: center;
+  
+          li {
+            font-size: 1.1em;
+            color: $CouleurBoutonsVert;
+          }
+        }
+      }
+      .etape {
+        padding: 10px;
+        h3 {
+          font-size: 0.9em;
+          color: $PoliceBlanche;
+          background-color: $CouleurBoutonsVert;
+          padding: 5px;
+          width: max-content;
+        }
+      }
+      .note {
+        padding-top: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+  
+        ul {
+          list-style: none;
+          display: flex;
+          align-items: center;
+  
+          li {
+            font-size: 1em;
+            text-align: center;
+            padding-right: 30px;
+            font-weight: bold;
+  
+            span {
+              font-size: 0.8em;
+              font-weight: lighter;
+            }
+          }
+        }
+      }
+  
+      p {
+        padding: 40px;
+        margin-top: 5%;
+        height: auto;
+        margin-bottom: 5%;
+      }
+  
+      .card-footer {
+        display: flex;
+        justify-content: space-between;
+        width: 85%;
+        right: 50%;
+        left: 47%;
+        transform: translate(-50%);
+        margin: 0 auto;
+        position: absolute;
+        bottom: 0px;
+        margin: 3%;
+  
+        h5 {
+          font-size: 0.9em;
+          color: $gris;
+        }
+      }
+    }
+  }
+  
