--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -217,9 +217,36 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
     position: relative;
     display: flex;
     width: 100%;
+    gap: 5px;
     
     #submit{
         
         margin-right: -500px;
+    }
+}
+.subnav{
+    position: absolute;
+    z-index: 1;
+    margin-top: 50px;
+    width: 1920px;
+    border: solid 1px #fff;
+    background: #fff;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 40px;
+    position: fixed;
+    line-height: 100px;
+    height: 100px;
+
+    a{
+        border: solid 1px #fff;
+        color: black;
+        text-decoration: none;
+    };
+    li img{
+        margin-left: 25px;
+        height: 100px;
+        width: 125px;
     }
 }
