Ajour données API

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -151,6 +151,8 @@ main{
             color: $PoliceBlanche;
             margin-left: 10%;
             width: 80%;
+            font-size: 15px;
+            text-align: center;
         }
     }
 
