--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -151,8 +151,6 @@ main{
             color: $PoliceBlanche;
             margin-left: 10%;
             width: 80%;
-            font-size: 15px;
-            text-align: center;
         }
     }
 
@@ -289,5 +287,35 @@ main{
         }
       }
     }
+  }
+
+  #Grille_main{
+      div{
+          position: relative;
+          h1{
+              position: absolute;
+              top: 30%;
+              left: 50%;
+              transform: translate(-50%);
+              font-size: 25px;
+              color: $PoliceBlanche;
+          }
+      }
+  }
+
+  #PartezEnVoyage_photos{
+      div{
+          width: 30%;
+          position: relative;
+          h1{
+            position: absolute;
+            width: 100%;
+            top: 30%;
+            left: 50%;
+            transform: translate(-50%);
+            text-align: center;
+            color: $PoliceBlanche;
+          }
+      }
   }
   
