--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -3,6 +3,7 @@
     height: 200px;
     border-radius: 7px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    filter: brightness(70%);
 }
 
 .cycliste1{
@@ -10,6 +11,14 @@
     border-radius: 7px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
     width: 100%;
+}
+
+.cycliste2{
+    height: 300px;
+    border-radius: 7px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    width: 100%;
+    filter: brightness(60%);
 }
 
 .TrouverMonVelo{
