--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -338,6 +338,11 @@ main{
     cursor: pointer;
 }
 
+.cycliste2:hover{
+    filter: blur(5px);
+    cursor: pointer;
+}
+
 .cycliste:hover{
     filter: blur(5px);
     cursor: pointer;
@@ -345,4 +350,8 @@ main{
 
 .div_h1_DouceurDuNord:hover{
     display: none;
+}
+
+button:hover{
+    cursor: pointer; 
 }
