--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -34,3 +34,18 @@
     height: 800px;
     object-fit: cover;
 }
+
+.cycliste1:hover{
+    filter: blur(5px);
+    cursor: pointer;
+}
+
+.cycliste2:hover{
+    filter: blur(5px);
+    cursor: pointer;
+}
+
+.cycliste:hover{
+    filter: blur(5px);
+    cursor: pointer;
+}
