--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -86,6 +86,9 @@ main{
     }
 
     #TrouverVelo{
+        h1,p{
+            text-align: center;
+        }
         ul{
             list-style: none;
             margin-top: 50px;
@@ -102,7 +105,7 @@ main{
                 }
                 .TexteSurPhoto{
                     position: absolute;
-                    color:$CouleurTitresSombres;
+                    color:$PoliceBlanche;
                     font-weight: bold;
                     z-index: 1;
                     left: 50%;
