--- a/scss/pages/_article.scss
+++ b/scss/pages/_article.scss
@@ -46,7 +46,7 @@
   img {
     width: 800px;
     z-index: -1;
-    box-shadow: 0 40px 60px 0 rgb(0 0 0 / 18%);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
 
   .content {
@@ -87,7 +87,7 @@
   img {
     width: 800px;
     z-index: -1;
-    box-shadow: 0 40px 60px 0 rgb(0 0 0 / 18%);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
 
   .content2 {
