--- a/scss/pages/_article.scss
+++ b/scss/pages/_article.scss
@@ -1,3 +1,31 @@
+.banniere2 {
+  background-image: url(../../img/temoignage3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 95vh;
+  position: relative;
+
+  .ban-content2 {
+    position: absolute;
+    width: 100%;
+    margin: 15% auto;
+    height: auto;
+  }
+  h1 {
+    color: $PoliceBlanche;
+    margin-bottom: 5%;
+    font-size: 3.5em;
+    font-weight: 600;
+  }
+
+  a {
+    margin-left: 50%;
+    color: $PoliceBlanche;
+    font-size: 40px;
+  }
+}
+
 .title_article {
   margin: 0 auto;
   max-width: 1000px;
@@ -46,7 +74,8 @@
   img {
     width: 800px;
     z-index: -1;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
 
   .content {
@@ -87,7 +116,8 @@
   img {
     width: 800px;
     z-index: -1;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
 
   .content2 {
