--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -362,3 +362,27 @@ main{
     display: none;
 }
 
+@media screen and (min-width: 600px) and (max-width: 900px) {
+        #BlocPresentationCarte{
+            flex-direction: column;
+            width: 100%;
+            margin: 10px auto;
+            width: 80%;
+            #presentation{
+                width: 100%;
+                align-items: center;
+            }
+            #map{
+                margin: 10px auto;
+                width: 100%;
+            }
+        }
+
+        #TrouverVelo{
+            width: 100%;
+            .TrouverMonVelo{
+                width: 120px;
+                height: 100px;
+            }
+        }
+}
