--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -380,9 +380,43 @@ main{
 
         #TrouverVelo{
             width: 100%;
-            .TrouverMonVelo{
-                width: 120px;
-                height: 100px;
+            .blocs_en_ligne{
+                flex-direction: column;
+                align-items: center;
+                li{
+                    width: 80%;
+                    margin-bottom: 30px;
+                    .TrouverMonVelo{
+                        width: 100%;
+                        height: 100px;
+                        object-fit: cover;
+                    }
+                }
+                li:hover{
+                    color: black;
+                }
+        }
+
+        #experiences_photos{
+            .cycliste2{
+                height: 190px;
+                width: 90%;
+            }
+            #bloc_info_temoignage{
+                width: 80%;
+                top: 65px;
+                h2{
+                    font-size: 15px;
+                }
             }
         }
+
+        .BlocsContenuCentre, .BlocsReduits {
+            width: 100%;
+        }
+
+        #Grille_main{
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
 }
