--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -192,7 +192,7 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   font-size: 30px;
   margin: 1px;
   border: solid 1px #fff;
-  width: 1920px;
+  width: 100%;
   background: rgba(255, 255, 255, 0.199);
 }
 .mail {
@@ -214,7 +214,7 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   position: absolute;
   z-index: 1;
   margin-top: 50px;
-  width: 1920px;
+  width: 100%;
   border: solid 1px #fff;
   background: #fff;
   display: flex;
