--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -183,7 +183,7 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
 }
 
 .nav {
-  position: absolute;
+  position: fixed;
   z-index: 1;
   display: flex;
   flex-direction: row;
@@ -211,7 +211,6 @@ input.selecteur-3:checked ~ .contenu .slider > li:nth-child(3) {
   }
 }
 .subnav {
-  position: absolute;
   z-index: 1;
   margin-top: 50px;
   width: 100%;
